@@ -66,11 +66,11 @@ instead (see below for details).
 <th>Release Date</th></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave">Stable</a></td>
-<td class="download">3.0.4
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.0.4.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.0.4.tar.bz2">.tar.bz2</a>)
+<td class="download">3.0.5
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.0.5.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.0.5.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">2 Apr 2009</td></tr>
+<td class="download">8 Apr 2009</td></tr>
 </table>
 </div>
 
