@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.0.4', `2 Apr 2009', `3.1.55', `26 Mar 2009')
+__DOWNLOAD_INFO__(`3.0.5', `8 Apr 2009', `3.1.55', `26 Mar 2009')
 </div>
 
 <blockquote class="note">
