@@ -2,6 +2,10 @@ __HEADER__(`Octave News Archive')
 
 <div class="section">
 <dl>
+<dt>April 8, 2009</dt>
+<dd>Version 3.0.5 has been released and is now available for ftp.
+Octave 3.0.5 fixes a serious file reading bug that was discovered just
+after the 3.0.4 release.</dd>
 <dt>April 2, 2009</dt>
 <dd>Version 3.0.4 has been released and is now available for ftp.
 Octave 3.0.4 is a bug-fixing release.  Most bugs reported since the
